include_directories($(PROJECT_SOURCE_DIR)../graph $(PROJECT_SOURCE_DIR)../thirdparty/ConvertUTF)
add_library(sources
AACSource.cpp
AC3Source.cpp
AIFFSource.cpp
AMRSource.cpp
ASFSource.cpp
AUSource.cpp
AVISource.cpp
BitmapSource.cpp
DATSource.cpp
DefaultMediaSourceFactory.cpp
DTSSource.cpp
FLACSource.cpp
FlashVideoSource.cpp
H264Source.cpp
MatroskaSource.cpp
MIDISource.cpp
MLPSource.cpp
MonkeysAudioSource.cpp
MPEGAudioSource.cpp
MPEGProgramSource.cpp
MPEGTransportSource.cpp
MPEGVideoSource.cpp
OggSource.cpp
PCMSource.cpp
PESPacketSource.cpp
PNGSource.cpp
ProgramAssociationSource.cpp
ProgramMapSource.cpp
QuickTimeSource.cpp
RealAudioSource.cpp
RealMediaSource.cpp
RMIDSource.cpp
TheoraSource.cpp
VorbisSource.cpp
WAVSource.cpp
)
